--- a/index.html
+++ b/index.html
@@ -6,55 +6,59 @@
     <body>
         <div class="filling">       
             <div class="main_container">
+                <div class="header">
+                    <div class="left">
+                        <img src="images/sssss.JPG" alt="logo" class="logo">
+                        <h4 class="product">Путешествия по Азии</h4>
+                    </div>
+                    <div class="right">
+                        <div class="contacts">
+                            <span>Наши контакты:</span>
+                            <span class="item">+8-800-000-500</span>
+                            <span class="item">+8-800-000-501</span>
+                            <span class="item">info@asia.holidays.com</span>
+                        </div>
+                        <div class="countries">
+                            <div> 
+                                <img src="images/india.JPG" alt="india flag" class="flags">
+                            <div>
+                                <p class="description">Индия</p>
+                            </div>
+                            </div>
+                            <div> 
+                                <img src="images/nepal.JPG" alt="nepal flag" class="flags">
+                                <div>
+                                    <p class="description">Непал</p>
+                                </div>
+                            </div>
+                            <div> <img src="images/tibet.JPG" alt="tibet flag" class="flags">
+                                <div>
+                                    <p class="description">Тибет</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="images/butan.JPG" alt="butan flag" class="flags">
+                                <div>
+                                    <p class="description">Бутан</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="images/srilanka.JPG" alt="srilanka flag" class="flags">
+                                <div>
+                                    <p class="description">Шри-Ланка</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="images/maldives.JPG" alt="maldives flag" class="flags">
+                                <div>
+                                    <p class="description">Мальдивы</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div>
-                    <img src="sssss.JPG" alt="logo" class="logo">
-                    <h4 class="product">Путешествия по Азии</h4>
-                </div>
-                <div class="contacts">
-                    <span>Наши контакты:</span>
-                    <span class="item">+8-800-000-500</span>
-                    <span class="item">+8-800-000-501</span>
-                    <span class="item">info@asia.holidays.com</span>
-                </div>
-                <div class="countries">
-                    <div> 
-                        <img src="india.JPG" alt="india flag" class="flags">
-                    <div>
-                        <p class="description">Индия</p>
-                    </div>
-                    </div>
-                    <div> 
-                        <img src="nepal.JPG" alt="nepal flag" class="flags">
-                        <div>
-                            <p class="description">Непал</p>
-                        </div>
-                    </div>
-                    <div> <img src="tibet.JPG" alt="tibet flag" class="flags">
-                        <div>
-                            <p class="description">Тибет</p>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="butan.JPG" alt="butan flag" class="flags">
-                        <div>
-                            <p class="description">Бутан</p>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="srilanka.JPG" alt="srilanka flag" class="flags">
-                        <div>
-                            <p class="description">Шри-Ланка</p>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="maldives.JPG" alt="maldives flag" class="flags">
-                        <div>
-                            <p class="description">Мальдивы</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                    <img src="horizon.JPG" alt="picture of horizon" class="img_block">
+                    <img src="images/horizon.JPG" alt="picture of horizon" class="img_block">
                 </div>
                 <div class="nav_menu">
                     <p>Главная</p>
@@ -95,8 +99,50 @@
                     <p>О нас</p>
                     <p>Контакты</p>
                 </div>
+                <div class="content">
+                    <div class="text_block_left">
+                        <h2 >Информация</h2>
+                        <span class="text_overflow"> Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                        </span>
+                    </div>
+                    <div class="text_block_right">
+                    <h2>Новости</h2>
+                        <span class="text_overflow"> Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                            Lorem ipsum dolor sit amet
+                        </span>
+                    </div>
+                </div>
             </div>
             </div>
         </div>        
     </body>
+    <footer class="footer">
+        <span>Copyright(C) asia-holidays.com 2010</span>
+    </footer>
 </html>
