--- a/index.html
+++ b/index.html
@@ -4,54 +4,54 @@
         <link href="styles.css" rel="stylesheet" />
     </head>    
     <body>
-        <div class="filling">       
+        <div class="main_background">       
             <div class="main_container">
                 <div class="header">
-                    <div class="left">
+                    <div class="logo_container">
                         <img src="images/sssss.JPG" alt="logo" class="logo">
-                        <h4 class="product">Путешествия по Азии</h4>
+                        <h4 class="title">Путешествия по Азии</h4>
                     </div>
-                    <div class="right">
+                    <div class="main_info_container">
                         <div class="contacts">
                             <span>Наши контакты:</span>
-                            <span class="item">+8-800-000-500</span>
-                            <span class="item">+8-800-000-501</span>
-                            <span class="item">info@asia.holidays.com</span>
+                            <span class="contacts_item">+8-800-000-500</span>
+                            <span class="contacts_item">+8-800-000-501</span>
+                            <span class="contacts_item">info@asia.holidays.com</span>
                         </div>
-                        <div class="countries">
+                        <div class="countries_block">
                             <div> 
-                                <img src="images/india.JPG" alt="india flag" class="flags">
+                                <img src="images/india.JPG" alt="india flag" class="flag">
                             <div>
-                                <p class="description">Индия</p>
+                                <p class="countries_description">Индия</p>
                             </div>
                             </div>
                             <div> 
-                                <img src="images/nepal.JPG" alt="nepal flag" class="flags">
+                                <img src="images/nepal.JPG" alt="nepal flag" class="flag">
                                 <div>
-                                    <p class="description">Непал</p>
+                                    <p class="countries_description">Непал</p>
                                 </div>
                             </div>
-                            <div> <img src="images/tibet.JPG" alt="tibet flag" class="flags">
+                            <div> <img src="images/tibet.JPG" alt="tibet flag" class="flag">
                                 <div>
-                                    <p class="description">Тибет</p>
-                                </div>
-                            </div>
-                            <div>
-                                <img src="images/butan.JPG" alt="butan flag" class="flags">
-                                <div>
-                                    <p class="description">Бутан</p>
+                                    <p class="countries_description">Тибет</p>
                                 </div>
                             </div>
                             <div>
-                                <img src="images/srilanka.JPG" alt="srilanka flag" class="flags">
+                                <img src="images/butan.JPG" alt="butan flag" class="flag">
                                 <div>
-                                    <p class="description">Шри-Ланка</p>
+                                    <p class="countries_description">Бутан</p>
                                 </div>
                             </div>
                             <div>
-                                <img src="images/maldives.JPG" alt="maldives flag" class="flags">
+                                <img src="images/srilanka.JPG" alt="srilanka flag" class="flag">
                                 <div>
-                                    <p class="description">Мальдивы</p>
+                                    <p class="countries_description">Шри-Ланка</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="images/maldives.JPG" alt="maldives flag" class="flag">
+                                <div>
+                                    <p class="countries_description">Мальдивы</p>
                                 </div>
                             </div>
                         </div>
@@ -62,37 +62,37 @@
                 </div>
                 <div class="nav_menu">
                     <p>Главная</p>
-                    <div class="dropdown">
-                        <button class="nav_button">Путешествия</button>
+                    <div class="dropdown_container">
+                        <a class="nav_item">Путешествия <i class="arrow down"></i></a>
                         <div class="menu_list">
-                            <a href="#">Путешествие 1</a>
-                            <a href="#">Путешествие 2</a>
-                            <a href="#">Путешествие 3</a>
-                            <a href="#">Путешествие 4</a>
-                            <a href="#">Путешествие 5</a>
+                            <a href="#" class="menu_list_items">Путешествие 1</a>
+                            <a href="#" class="menu_list_items">Путешествие 2</a>
+                            <a href="#" class="menu_list_items">Путешествие 3</a>
+                            <a href="#" class="menu_list_items">Путешествие 4</a>
+                            <a href="#" class="menu_list_items">Путешествие 5</a>
                         </div>
                     </div>
-                    <div class="dropdown">
-                        <button class="nav_button">Услуги</button>   
+                    <div class="dropdown_container">
+                        <a class="nav_item">Услуги <i class="arrow down"></i></a>   
                         <div class="menu_list">
-                            <a href="#">Услуга 1</a>
-                            <a href="#">Услуга 2</a>
-                            <a href="#">Услуга 3</a>
-                            <a href="#">Услуга 4</a>
-                            <a href="#">Услуга 5</a>
-                            <a href="#">Услуга 6</a>
+                            <a href="#" class="menu_list_items">Услуга 1</a>
+                            <a href="#" class="menu_list_items">Услуга 2</a>
+                            <a href="#" class="menu_list_items">Услуга 3</a>
+                            <a href="#" class="menu_list_items">Услуга 4</a>
+                            <a href="#" class="menu_list_items">Услуга 5</a>
+                            <a href="#" class="menu_list_items">Услуга 6</a>
                         </div>
                     </div>
-                    <div class="dropdown">
-                        <button class="nav_button">Партнерам</button>   
+                    <div class="dropdown_container">
+                        <a class="nav_item">Партнерам <i class="arrow down"></i></a>   
                         <div class="menu_list">
-                            <a href="#">Партнерам 1</a>
-                            <a href="#">Партнерам 2</a>
-                            <a href="#">Партнерам 3</a>
-                            <a href="#">Партнерам 4</a>
-                            <a href="#">Партнерам 5</a>
-                            <a href="#">Партнерам 6</a>
-                            <a href="#">Партнерам 7</a>
+                            <a href="#" class="menu_list_items">Партнерам 1</a>
+                            <a href="#" class="menu_list_items">Партнерам 2</a>
+                            <a href="#" class="menu_list_items">Партнерам 3</a>
+                            <a href="#" class="menu_list_items">Партнерам 4</a>
+                            <a href="#" class="menu_list_items">Партнерам 5</a>
+                            <a href="#" class="menu_list_items">Партнерам 6</a>
+                            <a href="#" class="menu_list_items">Партнерам 7</a>
                         </div>
                     </div>
                     <p>Отзывы клиентов</p>
@@ -100,9 +100,9 @@
                     <p>Контакты</p>
                 </div>
                 <div class="content">
-                    <div class="text_block_left">
+                    <div class="information_block">
                         <h2 >Информация</h2>
-                        <span class="text_overflow"> Lorem ipsum dolor sit amet
+                        <span class="content_text"> Lorem ipsum dolor sit amet
                             Lorem ipsum dolor sit amet
                             Lorem ipsum dolor sit amet
                             Lorem ipsum dolor sit amet
@@ -112,9 +112,9 @@
                             Lorem ipsum dolor sit amet
                         </span>
                     </div>
-                    <div class="text_block_right">
+                    <div class="news_block">
                     <h2>Новости</h2>
-                        <span class="text_overflow"> Lorem ipsum dolor sit amet
+                        <span class="content_text"> Lorem ipsum dolor sit amet
                             Lorem ipsum dolor sit amet
                             Lorem ipsum dolor sit amet
                             Lorem ipsum dolor sit amet
@@ -139,10 +139,10 @@
                     </div>
                 </div>
             </div>
+            <div class="footer">
+                <span>Copyright(C) asia-holidays.com 2010</span>
             </div>
-        </div>        
-    </body>
-    <footer class="footer">
-        <span>Copyright(C) asia-holidays.com 2010</span>
-    </footer>
+            </div>
+        </div>         
+    </body>    
 </html>
